--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,31 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    ext {
+        nav_version = "2.5.3"
+        room_version = "2.4.0"
+        coroutine_version = "1.6.4"
+        fragment_version = "1.5.3"
+        retrofit_version = "2.9.0"
+        koin_version = "3.3.0"
+        glide_version = '4.14.2'
+    }
+    dependencies {
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.7.20' apply false
+    id("com.google.dagger.hilt.android") version "2.44" apply false
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
