--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,10 @@ plugins {
     id("com.google.dagger.hilt.android")
 
 }
+def URL = "\"https://randomuser.me/api/\""
+
+def STRING = "String"
+def BASE_URL = "BASE_URL"
 
 android {
     namespace 'com.example.testtasknetronic'
@@ -21,6 +25,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField STRING, BASE_URL, URL
     }
 
     buildTypes {
